[tool.poetry]
name = "rabbitflow"
version = "0.1.0"
description = "Framework for RabbitMQ message processing with fanout-topic pattern"
authors = ["josecuev <jmcuev89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
loguru = "^0.7.2"
click = "^8.1.7"
docker = "^7.1.0"
graphviz = "^0.20.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"


[tool.poetry.scripts]
rabbitflow = "rabbitflow.management.commands:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

